# f1_telematry

./: .gitignore  CMakeLists.txt  index.js  package.json  webpack.config.js
UDPServer/src/: TCPSubscriber.h  UDPBroadcaster.cpp  UDPBroadcaster.h  UDPServer.cpp  UDPServer.h  UDPThread.cpp  UDPThread.h
app/: index.html  mainWindow.js  preload.js  storage.js
app/sesions/: meta.data
app/sesions/8432573862670222761/: data_1.data  data_11.data
data_types/: CarStatusData.h  CarTelemData.h  EventData.h  LapData.h  MotionData.h  SessionData.h  header.h
src/: Frame.js  SideBar.js  core.js  utils.js
src/panels/: Dashboard.js  Leaderboard.js  Profile.js  Records.js  SessionHistory.js  Settings.js
src/stylesheets/: _variables.scss  core.scss
telematry/src/: main.cpp  telematry.cpp  telematry.h
websocket/src/: Websocket.cpp  Websocket.h
